--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bitcoin Charts</title>
+    <title>Live Bitcoin Charts</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -22,81 +22,33 @@
             height: 500px;
             margin-bottom: 20px;
         }
-        iframe {
-            border: none;
-        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Bitcoin Charts</h1>
+        <h1>Live Bitcoin Charts</h1>
         <h2>Daily Chart</h2>
         <div class="chart">
             <iframe
-                src="https://s.tradingview.com/widgetembed/?frameElementId=tradingview_8d4e5&symbol=BITFINEX:BTCUSD&interval=D&hidesidetoolbar=1&hidebottomtoolbar=1&theme=dark&style=1"
+                src="https://s.tradingview.com/widgetembed/?frameElementId=tradingview_e7d85&symbol=BINANCE:BTCUSDT&interval=D&hidesidetoolbar=1&hidebottomtoolbar=1&theme=dark&style=1"
                 width="100%"
                 height="100%"
-                allowtransparency="true"
                 frameborder="0"
+                allowtransparency="true"
                 scrolling="no">
             </iframe>
         </div>
         <h2>1-Hour Chart</h2>
         <div class="chart">
             <iframe
-                src="https://s.tradingview.com/widgetembed/?frameElementId=tradingview_8d4e5&symbol=BITFINEX:BTCUSD&interval=60&hidesidetoolbar=1&hidebottomtoolbar=1&theme=dark&style=1"
+                src="https://s.tradingview.com/widgetembed/?frameElementId=tradingview_0c5e5&symbol=BINANCE:BTCUSDT&interval=60&hidesidetoolbar=1&hidebottomtoolbar=1&theme=dark&style=1"
                 width="100%"
                 height="100%"
-                allowtransparency="true"
                 frameborder="0"
+                allowtransparency="true"
                 scrolling="no">
             </iframe>
         </div>
     </div>
 </body>
 </html>
-Notepad++ v8.6.9 bug-fixes & new enhancements:
-
- 1. Make installation and updates easy & quiet by adding "Yes (Silent)" button.
- 2. Add new options '/closeRunningNpp' & '/runNppAfterSilentInstall' in the installer.
- 3. Fix crash of "Next Search Result" command on the empty search result.
- 4. Fix the regression where the Find dialog size is not remembered across sessions.
- 5. Fix the regression of content lost by using Encoding "Convert to..." commands. 
- 6. Fix the regression of exception/crash on Windows Server Core 2022.
- 7. Prevent DirectWrite from being enabled under Windows Sever.
- 8. Enhance the quality of Fluent toolbar icon sets for different DPI settings.
- 9. Improve the look & feel of tabbar close button in dark mode.
-10. Improve the dark mode tab bar icon in the search results panel.
-11. Add ability to pre-populate the predefined color sets for custom tones.
-12. Add "Show All Character" popup menu on toolbar button.
-13. Fix the rectangular selection copy-paste bug.
-14. Allow opening shortcut files (*.lnk) directly if the file extension is changed.
-15. Fix the lost panels issue.
-16. Add Backspace unindent option.
-17. Fix CSS more indentation bug.
-18. Include F13-F24 keys in Shortcut Mapper.
-19. Fix the problem where the last empty clean untitled tab cannot be closed after renaming.
-20. Add plugin a command (NPPM_SETUNTITLEDNAME) to rename untitled tab.
-21. Display a message box with information about disabled backward regex searching.
-22. Fix the display glitch for unsaved tabs containing tab characters.
-23. Fix status bar and tab bar flicker during the GUI updated (fixed only for dark mode).
-24. Fix the issue with "Begin/End Select" command after deletion.
-25. Resolve the integer overflow problem in the Column Editor.
-26. Adjust the position of hits text in the File Progress dialog.
-27. Fix the deployment of other software blocked due to NppShell.
-
-
-Get more info on
-https://notepad-plus-plus.org/downloads/v8.6.9/
-
-
-Included plugins:
-
-1.  NppExport v0.4
-2.  Converter v4.6
-3.  Mime Tool v3.1
-
-
-Updater (Installer only):
-
-* WinGUp (for Notepad++) v5.3
